full-moon/tests/lua54_cases/fail/parser/unclosed-attribute-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/lua54_cases/fail/parser/unclosed-attribute-1
---
error[ast]: expected `>` to close attribute
  ┌─ source.lua:1:18
  │
1 │ local name <const
  │                  ^


